# AstrBot

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CLAUDE.md  COMPATIBILITY_MATRIX.md  CONTRIBUTING.md  Dockerfile  Dockerfile.alpine  Dockerfile.cn  Dockerfile.minimal  Dockerfile_with_node  Makefile  PROJECT_ARCHITECTURE.md  PR_TEMPLATE.md  README.md  README_en.md  README_es.md  README_fr.md  README_ja.md  README_ru.md  README_zh-TW.md  README_zh.md  VENDORED.md  build_nuitka.py  build_pyinstaller.py  chromedriver_path.txt  compose-with-shipyard.yml  compose.yml  coverage.json  docker-compose.yml  llms.txt  main.py  main_bg.py  openapi.json  (+26 more)
.claude/: settings.local.json
.context/history/: commits.jsonl  commits.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  simili.yaml
.github/ISSUE_TEMPLATE/: config.yml  plugin-wish.md  plugin-wish.yml
.github/scripts/: resolve_packaged_cpython_runtime.py  resolve_pbs_target.py  smoke_test_packaged_runtime.py  sync_vendor.py  sync_vendor.sh
.github/workflows/: build-app.yml  build-docs.yml  ci-required-gate.yml  code-format.yml  coverage_test.yml  dashboard_ci.yml  desktop_release.yml  docker-image.yml  lint.yml  multi-python-test.yml  pr-checklist-check.yml  pr-title-check.yml  python-versions-test.yml  release.yml  simili-auto-close.yml  simili-triage.yml  smoke_test.yml  unit_tests.yml
.obsidian/: workspace.json
astrbot/: __about__.py  __init__.py  __main__.py  人格继承修复思路.md
astrbot-sdk/: .gitignore  AGENTS.md  CLAUDE.md  README.md  VENDORED.md  pyproject.toml
astrbot-sdk/docs/: 01_context_api.md  02_event_and_components.md  04_star_lifecycle.md  05_clients.md  06_error_handling.md  07_advanced_topics.md  08_testing_guide.md  09_api_reference.md  11_security_checklist.md  12_plugin_capability_registration_flow.md  INDEX.md  README.md  decorator-proposals.md
astrbot-sdk/tests/: __init__.py  (+18 more)
astrbot_api/: pyproject.toml
astrbot_api/src/astrbot_api/: __init__.py  abc.py  enums.py  exceptions.py  models.py
astrbot_sdk/: pyproject.toml
astrbot_sdk/src/astrbot_sdk/: __init__.py
astrbot_sdk/src/astrbot_sdk/base/: README.md  __init__.py  paths.py  provider.py
changelogs/: v3.4.13.md  v4.23.2.md  v4.25.6.md  v4.26.0.md  v4.26.2.md  v4.26.7.md  v4.5.1.md
dashboard/: CHAT_CONFIG_BINDING_FIX.md  PR_DESCRIPTION.md  README.md  TAURI_README.md  env.d.ts  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.dom.json  tsconfig.json  tsconfig.vite-config.json  vite.config.mts  vite.config.ts  vitest.config.ts  vitest.setup.ts
dashboard/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
dashboard/src-tauri/icons/: icon.icns
dashboard/src-tauri/src/: main.rs
data/: cmd_config.json
desktop/: README.md  main.js  package-lock.json  package.json
docs/: .gitignore  01_context_api.md  03_decorators.md  05_clients.md  06_error_handling.md  07_advanced_topics.md  08_testing_guide.md  12_plugin_capability_registration_flow.md  INDEX.md  PROJECT_ARCHITECTURE.md  README.md  knowledge-base-architecture.md  llm_tool_permission_model.md  n8n_provider_implementation.md  package.json  runtime-stability-runbook.md  v4-migration-comparison.md
examples/: abp_demo.py  aur_mcp_server.py
openspec/: SPEC.md  TASKS.md  abp.md  agent-message.md  config.yaml  env.md  openapi-v1.yaml  path.md  project.md
rust/: Cargo.toml
rust/src/: lib.rs  message.rs  orchestrator.rs  protocol.rs  python.rs  server.rs
scripts/: agent_shadow_check.py  astrbot.service  deploy-cli.ps1  diagnose_runtime_health.py  ensure_runtime_config.py  hatch_build.py  prepare_release.py  pyupgrade.py  qqofficial_ws_capture.py  run_live_upload_flow.py  smoke_misskey_parent_ctx.py  start_with_logs.ps1  sync-sdk.ps1  sync-sdk.sh  verify_tool_result_dedup.sh
src/: plugin.yaml  run.py  run_client.py
test_plugin/: plugin.yaml
tests/: TEST_REQUIREMENTS.md  __init__.py  conftest.py  test_admin_commands.py  test_agent.py  test_aiocqhttp_platform_adapter.py  test_aiocqhttp_remote_image_url.py  test_announcement_route.py  test_anthropic_kimi_code_provider.py  test_api_key_open_api.py  test_astr_agent_run_util.py  test_astr_main_agent_tool_capability.py  test_auth.py  test_auth_password.py  test_azure_tts_provider.py  test_backup.py  test_base.py  test_booter_decoupling.py  test_chat_route.py  test_cli_command_aliases.py  test_cli_init.py  test_cli_password.py  test_cli_plugin.py  test_cli_plugin_utils.py  test_cli_run.py  test_cli_service.py  test_client_regressions.py  test_code_quality_typing.py  test_command_filter.py  test_command_management.py  test_command_matching.py  test_command_model_parsing.py  test_command_parser.py  test_computer_booters_cua.py  test_computer_booters_local.py  test_computer_booters_shipyard.py  test_computer_config.py  test_computer_fs_tools.py  test_computer_olayer_python.py  test_computer_olayer_shell.py  (+237 more)
tests_v4/: README.md  benchmark_grouped_environment_stress.py  conftest.py  external_plugin_matrix.json  helpers.py  pytest.ini  test_api_contract.py  test_api_decorators.py  test_api_event_filter.py  test_api_legacy_context.py  test_api_message_components.py  test_api_modules.py  test_bootstrap.py  test_capability_proxy.py  test_capability_router.py  test_clients_module.py  test_compatibility_contract.py  test_conftest_fixtures.py  test_context.py  test_db_client.py  test_decorators.py  test_entrypoints.py  test_events.py  test_external_plugin_smoke.py  test_grouped_environment_smoke.py  test_handler_dispatcher.py  test_http_metadata_clients.py  test_legacy_adapter.py  test_legacy_context_metadata.py  test_legacy_loader.py  test_legacy_plugin_integration.py  test_legacy_runtime.py  test_llm_client.py  test_loader.py  test_memory_client.py  test_new_plugin_integration.py  test_peer.py  test_platform_client.py  test_protocol.py  test_protocol_descriptors.py  (+12 more)
types/: aip.pyi  deprecated.pyi  faiss.pyi  jsonschema.pyi  pilk.pyi  psutil.pyi  pyffmpeg.pyi  pysilk.pyi  readability.pyi  yaml.pyi
(+2907 files in other folders)
