[project]
name = "astrbot-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "anthropic>=0.72.1",
    "certifi>=2025.10.5",
    "click>=8.3.0",
    "docstring-parser>=0.17.0",
    "google-genai>=1.50.0",
    "loguru>=0.7.3",
    "openai>=2.7.2",
    "pydantic>=2.12.3",
    "pyyaml>=6.0.3",
]

[project.scripts]
astr = "astrbot_sdk.cli:cli"
